2009-05-07 Frank Naegler  <typo3@naegler.net>

	* added support for static_info_tables 

2009-05-06 Frank Naegler  <typo3@naegler.net>

	* added option disableEnableFields to validators: uniqueInDb and uniqueInPid
	* added exception on reload after success
	* added LLL marker in error view
	* replace t3lib_div::linkThisScript() with typoLink_URL(array('parameter' => $GLOBALS['TSFE']->id)) in case of a realurl or t3lib_div bug
	
2009-03-24 Frank Naegler  <typo3@naegler.net>

	* added TS-Option aliasField
	* remove first parameter from __construct of stepManager
	* added observer call globalMarkerConfirm to confirm step
	* added option negate for the equalField validator

2009-03-23 Frank Naegler  <typo3@naegler.net>

	* bugfix #2947 missing enableFields in validators: uniqueInDb and uniqueInPid

2009-03-20 Frank Naegler  <typo3@naegler.net>

	* added new validator: tx_feuserregister_validator_Age
	* added stdWraps for fields, labels and errorMessages
	* added observer call in step model
	* added field type hidden
	* bugfix send mails only on successfully save
	* added observer call in step success
	* added observer call in step preview
	* change dependeny to TYPO3 4.3 in case of bug in t3liv_div::removeXSS() see bugtracker: http://bugs.typo3.org/view.php?id=9945
	* bugfix age validator

2009-03-19 Frank Naegler  <typo3@naegler.net>

	* project moved to svn.typo3.org
	* added prepare function before write data to database (avoiding SQL injection)
	* added class tx_feuserregister_Request to encapsulate every access to the request parameters
	* added t3lib_div:removeXSS() to tx_feuserregister_Request->get()